--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -12,10 +12,7 @@
         "dbaeumer.vscode-eslint"
       ],
       "settings": {
-        "editor.formatOnSave": true,
-        "editor.codeActionsOnSave": {
-          "source.fixAll.eslint": true
-        }
+        "github.codespaces.defaultIdleTimeout": 180 // 3 hours
       }
     }
   }
