--- a/.devcontainer/.devcontainer.json
+++ b/.devcontainer/.devcontainer.json
@@ -7,6 +7,7 @@
   },
   "customizations": {
     "vscode": {
+      "extensions": [],
       "settings": {
         "github.codespaces.defaultIdleTimeout": 180 // 3 hours
       }
