--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,17 @@
 {
   "name": "Aztec V2 ejector",
+  "forwardPorts": [3001, 8081],
   "hostRequirements": {
     "cpus": 16,
     "memory": "64gb",
     "storage": "128gb"
   },
   "customizations": {
+    "codespaces": {
+      "openFiles": [
+        "manifest.json"
+      ]
+    },
     "vscode": {
       "extensions": [],
       "settings": {
