--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,14 +8,12 @@
   },
   "customizations": {
     "codespaces": {
-      "openFiles": [
-        "manifest.json"
-      ]
+      "openFiles": ["manifest.json"]
     },
     "vscode": {
       "extensions": [],
       "settings": {
-        "github.codespaces.defaultIdleTimeout": 180 // 3 hours
+        "github.codespaces.defaultIdleTimeout": 45 // 45 mins
       }
     }
   }
